<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BC Moose</string>
    <string name="agree">I Agree</string>
    <string name="bullString">Bulls</string>
    <string name="cowString">Cows</string>
    <string name="calfString">Calves</string>
    <string name="unknownString">Unidentified</string>
    <string name="hourString">Hours Out</string>
    <string name="submitString">Submit</string>
    <string name="aboutMenuString">About</string>
    <string name="settingsMenuString">Settings</string>
    <string name="fieldDefaultValue">0</string>
    <string name="submit_screen_prompt">Please enter Moose Sightings for your hunting day.</string>
    <string name="date">Date</string>
    <string name="title_activity_wtsettings">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="enable_reminders_cb_label">Enable Reminders</string>
    <string name="license_agreement_title">License Agreement</string>
    <string name="license_agreement_text">The Ministry of Forests, Lands, and Natural Resource Operations of the Government of British Columbia works together with the Habitat Conservation Trust Foundation and the BC Wildlife Federation to collect moose sighting data.\n\nThe Province of BC exclusively owns all property rights and intellectual property rights for the Moose Tracker application and received and produced material generated by it.</string>
    <string name="settings_done_button_title">Done</string>
    <string name="reset_button_title">Reset</string>
    <string name="change_button_title">Change</string>
    <string name="management_unit_label_prefix">Management Unit</string>
    <string name="sample_management_unit">7–32</string>
    <string name="cancel_button_title">Cancel</string>
    <string name="region_picker_title">Choose Management Unit</string>
    <string name="credits_top_line">Made possible by:</string>
    <string name="credits_text">BC moose hunters spend many hours, days, and weeks each year observing wildlife. These hunters are keen observers and frequently want to share the observations they have with wildlife managers. Ministry biologists are now teaming up with BC hunters through the BC Wildlife Federation to gather this important information to help benefit moose management.\n\nBC Moose Tracker allows hunters to record their observations of moose (number of bulls, cows, calves), their location (management unit) and effort (hours/day) while hunting. The data can be collected at any time during the hunting season (within or out of cell and WiFi range) and can provide another source of valuable information to provincial biologists to track trends in moose populations.</string>
    <string name="credits_text_2">Accurate reporting is essential. The information you provide will be used in two ways: 1) as an index of population size (number of moose seen per hour) that can be compared from year to year; 2) to calculate standard demographic ratios (bulls:100 cows and calves:100 cows) within the population.\n\nPlease record information for every day that you are hunting. It\'s important to record information even if you don’t see any moose some days.\n\nWhen possible the data collected by the BC Moose Tracker application will be calibrated against aerial surveys that occur within a management unit.</string>
    <string name="more_info_button_title">More Info</string>
    <string name="contact_email">moosetracker@gov.bc.ca</string>
    <string name="email_support_button_title">Email Support</string>
    <string name="statistics_title">2015 Summary</string>
    <string name="statistics_effort_title">Effort</string>
    <string name="statistics_sightings_title">Sightings</string>
    <string name="regs_index_button_text">Index</string>
    <string name="regs_section_index">Regulations Index</string>
    <string name="cancel">Cancel</string>
    <string name="external_pdf_viewer">An external PDF viewer app is required to view the regulations.</string>
    <string name="install_button_title">Play Store</string>
    <string name="open_button_title">Open</string>
    <string name="region_label">Region / MU:</string>

    <string-array name="regs_index">
        <item>Cover:1</item>
        <item>Region 1:28</item>
        <item>Region 2:35</item>
        <item>Region 3:43</item>
        <item>Region 4:48</item>
        <item>Region 5:58</item>
        <item>Region 6:65</item>
        <item>Region 7A:73</item>
        <item>Region 7B:79</item>
        <item>Region 8:86</item>
        <item>Trapping:91</item>
    </string-array>

    <string name="map_options">Map Type</string>
    <string-array name="map_types">
        <item>Normal</item>
        <item>Satellite</item>
        <item>Hybrid</item>
        <item>Terrain</item>
    </string-array>

    <string name="placeholder_days">9 days</string>
    <string name="placeholder_hours">64 hours</string>
    <string name="placeholder_moose">21 moose</string>
    <string name="placeholder_sightings_description">8 bulls, 6 cows, 3 calves, 4 unknown moose</string>
    <string name="placeholder_moose_per_hour">0.33 moose per hour</string>

    <string name="regs_disclaimer_title">Warning</string>
    <string name="regs_disclaimer_message">The British Columbia Hunting and Trapping Regulations Synopsis is intended for general information purposes only. Where there is a discrepancy between this synopsis and the Regulations, the Regulations are the final authority. Regulations are subject to change from time to time, and it is the responsibility of an individual to be informed of the current Regulations.\n\nTo ensure you have the most up to date hunting regulations please refer to the online version.</string>
    <string name="regs_disclaimer_view_online_button">View Online</string>
    <string name="regs_disclaimer_ok_button">OK</string>

</resources>