<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.bc.gov.fw.wildlifetracker.StatisticsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:id="@+id/chartPager"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/region_label"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"/>
            <TextView
                android:id="@+id/tvRegion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/sample_management_unit"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_weight="1" />
            <Button
                android:id="@+id/btnChangeRegion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical|end"
                android:text="@string/change_button_title"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:orientation="vertical"
                android:background="@color/statistics_effort_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/statistics_effort_title"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_marginTop="12dp" />
                <TextView
                    android:id="@+id/tvEffortDays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/placeholder_days"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    style="@style/Base.TextAppearance.AppCompat.Medium" />
                <TextView
                    android:id="@+id/tvEffortHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/placeholder_hours"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_marginBottom="20dp" />

            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/divider_color"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:orientation="vertical"
                android:background="@color/statistics_sightings_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/statistics_sightings_title"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_marginTop="12dp" />
                <TextView
                    android:id="@+id/tvSightingsTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/placeholder_moose"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    style="@style/Base.TextAppearance.AppCompat.Medium" />
                <TextView
                    android:id="@+id/tvSightingsDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/placeholder_sightings_description"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="20dp" />

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_color"/>

        <TextView
            android:id="@+id/tvMoosePerHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/placeholder_moose_per_hour"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            style="@style/Base.TextAppearance.AppCompat.Medium" />

    </LinearLayout>
</ScrollView>
