<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/license_agreement_title"
            android:id="@+id/tvLicenseAgreementHeading"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/license_agreement_text"
            android:id="@+id/tvLicenseAgreement"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <Button
            android:id="@+id/licenseAgreeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

    </LinearLayout>
</ScrollView>
