<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_with_text"
            android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/submit_screen_prompt"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="12dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_gravity="end">

                <TextView
                    android:id="@+id/dateView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/date"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnChangeDate"
                    android:layout_gravity="end"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/change_button_title" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="6dp"
                    android:layout_marginEnd="6dp"
                    android:text="@string/management_unit_label_prefix"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvManagementUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sample_management_unit"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnChangeManagementUnit"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/change_button_title" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/main_number_picker_margin_vertical"
                android:layout_marginBottom="@dimen/main_number_picker_margin_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginRight="@dimen/main_number_picker_spacing"
                    android:layout_marginEnd="@dimen/main_number_picker_spacing"
                    android:text="@string/bullString"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ca.bc.gov.fw.wildlifetracker.WTNumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bullsNumberPicker"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/main_number_picker_margin_vertical"
                android:layout_marginBottom="@dimen/main_number_picker_margin_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginRight="@dimen/main_number_picker_spacing"
                    android:layout_marginEnd="@dimen/main_number_picker_spacing"
                    android:text="@string/cowString"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ca.bc.gov.fw.wildlifetracker.WTNumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cowsNumberPicker"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/main_number_picker_margin_vertical"
                android:layout_marginBottom="@dimen/main_number_picker_margin_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginRight="@dimen/main_number_picker_spacing"
                    android:layout_marginEnd="@dimen/main_number_picker_spacing"
                    android:text="@string/calfString"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ca.bc.gov.fw.wildlifetracker.WTNumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/calvesNumberPicker"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/main_number_picker_margin_vertical"
                android:layout_marginBottom="@dimen/main_number_picker_margin_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginRight="@dimen/main_number_picker_spacing"
                    android:layout_marginEnd="@dimen/main_number_picker_spacing"
                    android:text="@string/unknownString"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ca.bc.gov.fw.wildlifetracker.WTNumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/unknownNumberPicker"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/main_number_picker_margin_vertical"
                android:layout_marginBottom="@dimen/main_number_picker_margin_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginRight="@dimen/main_number_picker_spacing"
                    android:layout_marginEnd="@dimen/main_number_picker_spacing"
                    android:text="@string/hourString"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ca.bc.gov.fw.wildlifetracker.WTNumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/hoursNumberPicker"/>

            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dp"
                android:layout_marginEnd="60dp"
                android:layout_gravity="center"
                android:text="@string/reset_button_title" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/submitString" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>